--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@genkit-ai/google-genai": "^1.20.0",
@@ -59,9 +61,19 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.3",
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "storybook": "^10.0.7",
+    "@storybook/nextjs": "^10.0.7",
+    "@chromatic-com/storybook": "^4.1.2",
+    "@storybook/addon-docs": "^10.0.7",
+    "@storybook/addon-onboarding": "^10.0.7",
+    "eslint-plugin-storybook": "^10.0.7",
+    "@storybook/addon-a11y": "^10.0.7",
+    "@storybook/addon-vitest": "^10.0.7"
   }
 }
